--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -984,6 +984,8 @@
     <string name="text_bet_not_success4">交易状况</string>
     <string name="text_security_money">押金：%s</string>
     <string name="text_security_money2">还有%s天</string>
+    <string name="customer_service_title">客服中心</string>
+
     <!--自我禁制-->
     <string name="self_limit">自我禁制</string>
     <string name="self_limit_impotent">重要事项</string>
