--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -53,6 +53,10 @@
     <string name="register_privacy_policy_promotions"></string>
     <string name="register_over_21">I am over 21 years of age and have read and agree to the&#160;</string>
     <string name="register_rules">&#160;Rules and Terms</string>
+    <string name="register_not_ph_official">I am not a government official and/or employee directly connected with the operation of the Philippine government or any of its agencies.</string>
+    <string name="register_not_ph_school">I am not a student of any school, college, or university in the Philippines.</string>
+    <string name="register_rule_okbet">I understand that should my provided information has been found incorrect, OKBet has the right to impose a penalty on my account subject to its Terms and Conditions Sections 5.1 - 5.2.</string>
+    <string name="register_rule_agree_all">I agree to all terms and conditions of the above.</string>
     <string name="register_success">Register successfully</string>
     <string name="register_watch_first">Explore the game</string>
     <string name="register_jump">The page will be jumping to %s 5 sec later.</string>
