--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -53,6 +53,10 @@
     <string name="register_privacy_policy_promotions">向我发送更新和促销信息</string>
     <string name="register_over_21">我已满21岁并且已阅读及同意</string>
     <string name="register_rules">规则与条款</string>
+    <string name="register_not_ph_official">我不是菲律宾政府或与其相关机构的政府官员或雇员。</string>
+    <string name="register_not_ph_school">我不是菲律宾任何学校、学院或大学的学生。</string>
+    <string name="register_rule_okbet">我明白，如果我提供的信息被发现不正确，OKBet 有权根据其条款和条件第 5.1 - 5.2 条对我的帐户进行处罚。</string>
+    <string name="register_rule_agree_all">我同意上述所有条款和条件。</string>
     <string name="register_success">注册成功</string>
     <string name="register_watch_first">来去逛逛</string>
     <string name="register_jump">将在5秒后跳转至%s...</string>
