--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,7 +136,7 @@
     <string name="home_tab_eps">PRICE BOOSTS</string>
     <string name="home_title_eps">PRICE BOOSTS</string>
     <string name="title_eps_more">High odds</string>
-    <string name="game_soon">SOON</string>
+    <string name="game_soon">Soon</string>
     <string name="label_in_play_games">Petanque</string>
     <string name="label_all">All</string>
     <string name="label_match_recommend">Match recommend</string>
