--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -656,10 +656,10 @@
     <string name="complete">Completed</string>
     <string name="winnable_amount_colon">To Win：</string>
     <string name="finance">Fund Detail</string>
-    <string name="record_recharge">Deposit record</string>
-    <string name="record_withdrawal">Withdrawal record</string>
-    <string name="record_conversion">Conversion record</string>
-    <string name="record_history">History</string>
+    <string name="record_recharge">Deposit Record</string>
+    <string name="record_withdrawal">Withdrawal Record</string>
+    <string name="record_conversion">Conversion Record</string>
+    <string name="record_history">Transaction History</string>
     <string name="recharge_state_success">success</string>
     <string name="recharge_state_failed">Fail</string>
     <string name="recharge_state_processing">Being processed</string>
