[Fix]23965 【Android】[簡中] 宣傳頁，文案需使用簡中

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1099,7 +1099,7 @@
     <string name="hot_recommend">热门推荐</string>
     <string name="recommend_match">月均10,000\n滚球赛事</string>
     <string name="recommend_best_odd">最佳赔率\n最优服务</string>
-    <string name="recommend_safe">安全, 簡單,\n快速處理</string>
+    <string name="recommend_safe">安全, 简单,\n快速处理</string>
 <!--endregion-->
 
     <!--region 我的賽事-->
