--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -51,7 +51,7 @@
     <string name="register_privacy">按照</string>
     <string name="register_privacy_policy">隐私权政策</string>
     <string name="register_privacy_policy_promotions">向我发送更新和促销信息</string>
-    <string name="register_over_21">我已满21岁并且已阅读及同意</string>
+    <string name="register_over_21">我已满21岁并且已阅读及同意%s</string>
     <string name="register_rules">规则与条款</string>
     <string name="register_not_ph_official">我不是菲律宾政府或与其相关机构的政府官员或雇员。</string>
     <string name="register_not_ph_school">我不是菲律宾任何学校、学院或大学的学生。</string>
