--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -1144,4 +1144,6 @@
     <string name="my_favorite_empty_title">Sự kiện của tôi</string>
     <string name="my_favorite_empty_msg">Chọn biểu tượng ở trên để thêm nó vào "Sự kiện của tôi".\nBạn có thể chia nhóm chúng và dễ dàng truy cập vào tất cả các sự kiện mà bạn quan tâm.</string>
     <!--endregion-->
+
+    <string name="current_corner">Tổng Số Hiện Tại:</string>
 </resources>
