--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -1110,4 +1110,6 @@
     <string name="my_favorite_empty_title">我的赛事</string>
     <string name="my_favorite_empty_msg">选择上面的图标，会将其添加到”我的赛事”中。\n您可以对其进行分组并轻松访问你感兴趣的所有赛事。</string>
     <!--endregion-->
+
+    <string name="current_corner">当前总数:</string>
 </resources>
