--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1114,4 +1114,6 @@
     <string name="my_favorite_empty_title">My Events</string>
     <string name="my_favorite_empty_msg">Select the icon above，add to My Events.\nYou can group them and easily watch all the match that interest you.</string>
     <!--endregion-->
+
+    <string name="current_corner">Current Total:</string>
 </resources>
