--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1105,9 +1105,9 @@
 
     <!--region 宣傳頁-->
     <string name="hot_recommend">Recommended</string>
-    <string name="recommend_match">10,000 Live Games Monthly</string>
-    <string name="recommend_best_odd">Better Prices Better Service</string>
-    <string name="recommend_safe">Secure, Easy, Fast Process</string>
+    <string name="recommend_match">10,000 Live Games\nMonthly</string>
+    <string name="recommend_best_odd">Better Prices\nBetter Service</string>
+    <string name="recommend_safe">Secure, Easy\nFast Process</string>
     <!--endregion-->
 
     <!--region 我的賽事-->
