[Fix] 24081【Android】越南文註冊頁面勾選鈕第二列文字顏色須修改

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -53,6 +53,7 @@
     <string name="register_privacy_policy_promotions">向我发送更新和促销信息</string>
     <string name="register_over_21">我已满21岁并且已阅读及同意%s</string>
     <string name="register_rules">规则与条款</string>
+    <string name="register_rules_2nd_half"></string>
     <string name="register_not_ph_official">我不是菲律宾政府或与其相关机构的政府官员或雇员。</string>
     <string name="register_not_ph_school">我不是菲律宾任何学校、学院或大学的学生。</string>
     <string name="register_rule_okbet">我明白，如果我提供的信息被发现不正确，OkBet 有权根据其条款和条件第 5.1 - 5.2 条对我的帐户进行处罚。</string>
