--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -564,9 +564,9 @@
     <string name="withdraw_password">Withdraw Password</string>
     <string name="withdraw_all">EXTRACT ALL</string>
     <string name="withdraw_handling_fee_hint">· Service fee: %1$S %% Service fee to be paid: %2$s</string>
-    <string name="withdraw_crypto_exchange_rate_hint">・Exchange rate：%1$s</string>
-    <string name="withdraw_crypto_amount_hint">・Withdraw：%1$s %s</string>
-    <string name="withdraw_crypto_fee_hint">・Withdraw service fee：%1$s %s</string>
+    <string name="withdraw_crypto_exchange_rate_hint">· Exchange rate：%1$s</string>
+    <string name="withdraw_crypto_amount_hint">· Withdraw：%1$s %s</string>
+    <string name="withdraw_crypto_fee_hint">· Withdraw service fee：%1$s %s</string>
     <string name="hint_please_enter_withdraw_amount">Limit%1$s~%2$s</string>
     <string name="hint_four_number_password">Withdrawal password</string>
     <string name="hint_please_enter_withdraw_password">withdrawal password</string>
