--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -552,10 +552,10 @@
     <string name="withdraw_password">提款密码</string>
     <string name="withdraw_uw_check">扣除金额</string>
     <string name="withdraw_all">全部提取</string>
-    <string name="withdraw_handling_fee_hint">・手续费率：%1$s%% 须支付手续费：%2$s</string>
-    <string name="withdraw_crypto_exchange_rate_hint">・汇率：%1$s</string>
-    <string name="withdraw_crypto_amount_hint">・提款金额：%1$s %s</string>
-    <string name="withdraw_crypto_fee_hint">・提款手续费：%1$s %s</string>
+    <string name="withdraw_handling_fee_hint">· 手续费率：%1$s%% 须支付手续费：%2$s</string>
+    <string name="withdraw_crypto_exchange_rate_hint">· 汇率：%1$s</string>
+    <string name="withdraw_crypto_amount_hint">· 提款金额：%1$s %s</string>
+    <string name="withdraw_crypto_fee_hint">· 提款手续费：%1$s %s</string>
     <string name="hint_please_enter_withdraw_amount">限额%1$s~%2$s</string>
     <string name="hint_four_number_password">请输入提款密码</string>
     <string name="hint_please_enter_withdraw_password">请输入提款密码</string>
