[Fix] 24130 【Android】越南文複式串關注單文案有誤

--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -860,23 +860,23 @@
     <string name="service_2">CSKH2</string>
     <string name="service_connect">Liên hệ</string>
     <string name="top_game">Sự kiện hàng đầu thế giới</string>
-    <string name="parlay_10_fold">10 xiên 1</string>
-    <string name="parlay_10_block">10 xiên 1013</string>
-    <string name="parlay_2_fold">2 xiên 1</string>
-    <string name="parlay_3_fold">3 xiên 1</string>
-    <string name="parlay_3_block">3 xiên 4</string>
-    <string name="parlay_4_fold">4 xiên 1</string>
-    <string name="parlay_4_block">4 xiên 11</string>
-    <string name="parlay_5_fold">5 xiên 1</string>
-    <string name="parlay_5_block">5 xiên 26</string>
-    <string name="parlay_6_fold">6 xiên 1</string>
-    <string name="parlay_6_block">6 xiên 57</string>
-    <string name="parlay_7_fold">7 xiên 1</string>
-    <string name="parlay_7_block">7 xiên 120</string>
-    <string name="parlay_8_fold">8 xiên 1</string>
-    <string name="parlay_8_block">8 xiên 247</string>
-    <string name="parlay_9_fold">9 xiên 1</string>
-    <string name="parlay_9_block">9 xiên 502</string>
+    <string name="parlay_10_fold">Xâu 10</string>
+    <string name="parlay_10_block">Liên Hoàn (10)</string>
+    <string name="parlay_2_fold">Xâu 2</string>
+    <string name="parlay_3_fold">Xâu 3</string>
+    <string name="parlay_3_block">Liên Hoàn 3</string>
+    <string name="parlay_4_fold">Xâu 4</string>
+    <string name="parlay_4_block">Liên Hoàn 4</string>
+    <string name="parlay_5_fold">Xâu 5</string>
+    <string name="parlay_5_block">Liên Hoàn 5</string>
+    <string name="parlay_6_fold">Xâu 6</string>
+    <string name="parlay_6_block">Liên Hoàn 6</string>
+    <string name="parlay_7_fold">Xâu 7</string>
+    <string name="parlay_7_block">Liên Hoàn 7</string>
+    <string name="parlay_8_fold">Xâu 8</string>
+    <string name="parlay_8_block">Liên Hoàn 8</string>
+    <string name="parlay_9_fold">Xâu 9</string>
+    <string name="parlay_9_block">Liên Hoàn (9)</string>
     <string name="parlay_2_fold_rule">Xâu 2 là sự kết hợp của hai lựa chọn trên các sự kiện riêng biệt.
     Cược trả về khi có tất cả cược đều thắng.
     Trường hợp nhiều trận đấu đang diễn ra, Xâu 2 có thể kết hợp. Ví dụ Xâu 2 (x3) từ 3 lựa chọn.
