[Fix] 24239 【0519文案】【Android】簡中投注單與快捷投注單，收據狀態未修改

--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -353,7 +353,7 @@
     <string name="ended">已结束</string>
     <string name="suspend">延期</string>
     <string name="uncheck">未确认</string>
-    <string name="undone">未结算</string>
+    <string name="undone">進行中</string>
     <string name="settled">已结算</string>
     <string name="win">赢</string>
     <string name="win_half">赢半</string>
