[調整] 「充值介面」中，部分欄位名稱建議修改

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -438,7 +438,7 @@
     <string name="title_name">Full Name：</string>
     <string name="title_account">Account：</string>
     <string name="title_address">Address：</string>
-    <string name="title_deposit_money">Top-up amount</string>
+    <string name="title_deposit_money">Deposit Amount</string>
     <string name="title_payer">Account</string>
 <!--    <string name="edt_hint_deposit_money">Limit %1$s～%2$s RMB</string>-->
     <string name="edt_hint_deposit_money">Limit %1$s～%2$s</string>
@@ -459,8 +459,8 @@
     <string name="btn_copy">Copy</string>
     <string name="title_qr_pay">Scan to pay：</string>
     <string name="title_hint_qr_pay">Scan to pay, if you have any questions please contact customer service!</string>
-    <string name="title_fee_rate">・Service fee：</string>
-    <string name="title_fee_amount">・Service fee amount：</string>
+    <string name="title_fee_rate">・Transaction Fee：</string>
+    <string name="title_fee_amount">・Transaction Fee Amount：</string>
     <string name="title_rebate_rate">・Rebate：</string>
     <string name="title_rebate_amount">・Rebate amount：</string>
     <string name="title_remark">Remark：</string>
@@ -474,8 +474,8 @@
     <string name="paypal_recharge_hint">Please log in the member to check whether the Paypal account is used before each payment. The company is not responsible for failing to check the overdue account.</string>
     <string name="title_pay_channel">Payment channels</string>
     <string name="title_choose_pay_channel">Payment channels</string>
-    <string name="title_pay_gap">Payment account</string>
-    <string name="title_choose_pay_gap">Payment account</string>
+    <string name="title_pay_gap">Payment Account</string>
+    <string name="title_choose_pay_gap">Payment Account</string>
     <string name="title_pay_bank">Payment bank</string>
     <string name="title_choose_pay_bank">Payment bank</string>
     <string name="title_pay_msg">Payment information</string>
@@ -488,15 +488,15 @@
     <string name="txv_transfer_pay">Transfer</string>
     <string name="txv_online_pay">Top Up Online</string>
     <string name="txv_crypto_pay">Virtual currency transfer</string>
-    <string name="error_recharge_amount">Incorrect format or value of top-up amount</string>
-    <string name="error_recharge_account">Incorrect number or value of top-up amount</string>
+    <string name="error_recharge_amount">Incorrect format or value of deposit amount</string>
+    <string name="error_recharge_account">Incorrect number or value of deposit amount</string>
     <string name="error_bank_id">There is an error in the format of the bank account number</string>
     <string name="error_hashcode">Block chain trading ID format error</string>
     <string name="error_name">The name that you entered is not valid</string>
     <string name="text_money_copy_success">Copy successful</string>
     <string name="title_currency">USDT channel</string>
     <string name="title_choose_currency">Select agreement/currency</string>
-    <string name="txv_recharge_count">Top-up amount</string>
+    <string name="txv_recharge_count">Deposit Amount</string>
     <string name="edt_hint_crypto_pay_count">Limit %1$s ~ %2$s</string>
     <string name="hint_rate">・Exchange rate：%1$s</string>
     <string name="title_transaction_id">Block chain trading ID</string>
@@ -505,7 +505,7 @@
     <string name="hint_fee_amount">・Service charge：%1$s %s</string>
     <string name="hint_feeback_rate">・Rebate rate：%1$s</string>
     <string name="hint_feeback_amount">・Rebate rate amount：%1$s %s</string>
-    <string name="txv_recharge_money">・Top-up amount：%1$s %s</string>
+    <string name="txv_recharge_money">・Deposit Amount：%1$s %s</string>
     <string name="title_recharge_account">USDT deposit account</string>
     <string name="title_choose_recharge_account">Select deposit account</string>
     <string name="title_recharge_address">USDT deposit address：</string>
@@ -563,10 +563,10 @@
     <string name="withdraw_amount">Withdraw</string>
     <string name="withdraw_password">Withdraw Password</string>
     <string name="withdraw_all">EXTRACT ALL</string>
-    <string name="withdraw_handling_fee_hint">· Service fee: %1$S %% Service fee to be paid: %2$s</string>
+    <string name="withdraw_handling_fee_hint">· Transaction Fee: %1$S %% Transaction Fee to be paid: %2$s</string>
     <string name="withdraw_crypto_exchange_rate_hint">· Exchange rate：%1$s</string>
     <string name="withdraw_crypto_amount_hint">· Withdraw：%1$s %s</string>
-    <string name="withdraw_crypto_fee_hint">· Withdraw service fee：%1$s %s</string>
+    <string name="withdraw_crypto_fee_hint">· Withdraw Transaction Fee：%1$s %s</string>
     <string name="hint_please_enter_withdraw_amount">Limit%1$s~%2$s</string>
     <string name="hint_four_number_password">Withdrawal password</string>
     <string name="hint_please_enter_withdraw_password">withdrawal password</string>
