[Fix] 24264 【Android】英文語系宣傳首頁上方圖片單字需修改

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1107,7 +1107,7 @@
     <!--region 宣傳頁-->
     <string name="hot_recommend">Recommended</string>
     <string name="recommend_match">10,000 Live Games\nMonthly</string>
-    <string name="recommend_best_odd">Better Prices\nBetter Service</string>
+    <string name="recommend_best_odd">Better Price\nBetter Service</string>
     <string name="recommend_safe">Secure, Easy\nFast Process</string>
     <!--endregion-->
 
