修正 24409 【Android】[英文] 開啟「個人中心-充值記錄-全部訂單狀態 filter」，部分選項字首未大寫

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -666,7 +666,7 @@
     <string name="record_withdrawal">Withdrawal Record</string>
     <string name="record_conversion">Conversion Record</string>
     <string name="record_history">Transaction History</string>
-    <string name="recharge_state_success">success</string>
+    <string name="recharge_state_success">Success</string>
     <string name="recharge_state_failed">Fail</string>
     <string name="recharge_state_processing">Processing</string>
     <string name="all_order_status">All Status</string>
