--- a/app/src/main/res/values-zh/strings.xml
+++ b/app/src/main/res/values-zh/strings.xml
@@ -122,6 +122,7 @@
     <string name="btn_agreement">开户协议</string>
     <string name="have_account">已有账号?</string>
     <string name="btn_login">登录</string>
+    <string name="btn_login_by_credit_system">立即登录</string>
     <string name="btn_register">注册</string>
     <string name="no_announcement">暂无公告</string>
     <string name="lottery">彩票</string>
