优化夜间模式，真实姓名根据当前语言做限制

--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1120,4 +1120,5 @@
     <string name="current_corner">Current Total:</string>
     <string name="cancel_auto">Rejected</string>
     <string name="cancel_manual">Void</string>
+    <string name="error_input_has_blank">Incorrect input. Use %s only, don\'t enter the continuous space.</string>
 </resources>
