--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -495,7 +495,7 @@
     <string name="hint_fee_amount">・Số tiền phí xử lý：%1$s %s</string>
     <string name="hint_feeback_rate">・Hoàn lại：%1$s</string>
     <string name="hint_feeback_amount">・Số tiền hoàn lại： %1$s %s</string>
-    <string name="txv_recharge_money">・Số tiền nạp %1$s %s</string>
+    <string name="txv_recharge_money">・Số tiền đặt cọc %1$s %s</string>
     <string name="title_recharge_account">Tài khoản gửi tiền</string>
     <string name="title_choose_recharge_account">Chọn một tài khoản gửi tiền</string>
     <string name="title_recharge_address">Địa chỉ gửi tiền：</string>
@@ -670,7 +670,7 @@
     <string name="recharge_channel_paymaya">PayMaya</string>
     <string name="recharge_channel_admin">Hệ thống gửi tiền</string>
     <string name="recharge_log_order_time">Thời gian đơn cược</string>
-    <string name="recharge_log_recharge_amount">Số tiền nạp</string>
+    <string name="recharge_log_recharge_amount">Số tiền đặt cọc</string>
     <string name="recharge_log_channel_type">Loại kênh</string>
     <string name="recharge_log_order_state">Trạng thái đơn cược</string>
     <string name="withdraw_log_withdraw_amount">Số tiền rút</string>
@@ -972,13 +972,13 @@
     <string name="commission_detail_desc_12">Giao dịch đầu tiên là nạp 1.000 và hoàn thành số tiền hợp lệ 1.000. -> Người dùng chưa rút tiền và gửi tiền lần giao dịch thứ hai.</string>
     <string name="commission_detail_desc_13">Giao dịch thứ hai là nạp 2.000 và hoàn thành số tiền hợp lệ 1.000. -> Người dùng phải hoàn thành số tiền hợp lệ 1.000 để không bị khấu trừ.</string>
     <string name="commission_detail_desc_14">Mặc dù giao dịch đầu tiên đã hoàn thành số tiền hợp lệ, giao dịch thứ hai là số tiền hợp lệ chưa hoàn thành, sau đó được tính theo công thức như sau.</string>
-    <string name="commission_detail_desc_15">Số tiền nạp (2.000) - số tiền hợp lệ đã hoàn thành (1.000) = 1.000</string>
+    <string name="commission_detail_desc_15">Số tiền đặt cọc (2.000) - số tiền hợp lệ đã hoàn thành (1.000) = 1.000</string>
     <string name="commission_detail_desc_16">Giao dịch thứ hai vẫn cần đạt 1.000 để rút.</string>
     <string name="commission_detail_desc_17">Tình huống 3</string>
     <string name="commission_detail_desc_18">Giao dịch đầu tiên là nạp 1.000 và hoàn thành số tiền hợp lệ 500. -> Người dùng chưa rút và gửi tiền vào giao dịch thứ hai.</string>
     <string name="commission_detail_desc_19">Giao dịch thứ hai là nạp 2.000 và hoàn thành số tiền hợp lệ 1.000. -> Người dùng phải hoàn thành số tiền hợp lệ là 1.500 để không bị khấu trừ.</string>
     <string name="commission_detail_desc_20">Bởi vì cả hai giao dịch đều chưa hoàn thành, vì vậy hãy tính toán theo công thức như sau</string>
-    <string name="commission_detail_desc_21">Số tiền nạp (1.000 + 2.000) - số tiền hợp lệ đã hoàn thành (500 + 1.000) = 1.500</string>
+    <string name="commission_detail_desc_21">Số tiền đặt cọc (1.000 + 2.000) - số tiền hợp lệ đã hoàn thành (500 + 1.000) = 1.500</string>
     <string name="commission_detail_desc_22">Số tiền hợp lệ cần 1.500 để rút.</string>
     <string name="commissiom_completed">Hoàn thành</string>
     <string name="commission_example">i.g.</string>
