--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -683,7 +683,7 @@
     <string name="recharge_channel_paymaya">PayMaya</string>
     <string name="recharge_channel_admin">System add money</string>
     <string name="recharge_log_order_time">Time</string>
-    <string name="recharge_log_recharge_amount">Deposit</string>
+    <string name="recharge_log_recharge_amount">Deposit Amount</string>
     <string name="recharge_log_channel_type">Method</string>
     <string name="recharge_log_order_state">Status</string>
     <string name="withdraw_log_withdraw_amount">Withdraw</string>
