--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -823,7 +823,7 @@
     <string name="myfavorite_notify_detail_add">Đã thêm vào kèo của tôi</string>
     <string name="myfavorite_notify_detail_remove">Xóa khỏi kèo của tôi</string>
     <string name="statistics_title">Số liệu thống kê</string>
-    <string name="bet_info_list_minimum_limit_amount">Số tiền đơn đặt cược tối thiểu là %1$s %2$s</string>
+    <string name="bet_info_list_minimum_limit_amount">Số tiền đặt cược nhỏ hơn hạn mức đặt cược</string>
     <string name="actual_bet">Cược thực tế</string>
     <string name="bet_receipt_all_bet">Tổng tiền đặt cược</string>
     <string name="third_game_vncp">Xổ số CG</string>
